syntax = "proto3";

import "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package datasource.service.v1;

option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

service DataSourceNG {
  rpc Item(ItemReq) returns (ItemReply);
}

message ItemReq {
  string item_uuid = 1
      [(gogoproto.moretags) = 'form:"item_uuid" validate:"required"'];
  string type_name = 2 [(gogoproto.moretags) = 'form:"type_name"'];
}

message StructedItem {
  map<string, FieldValue> item = 1;
}

message ItemReply {
  oneof item {
    StructedItem value_struct = 1;
    FieldValue value_raw = 2;
  }
}

message StringList {
  repeated string list = 1;
}

message IntList {
  repeated int64 list = 1;
}

message BoolList {
  repeated bool list = 1;
}

message ItemList {
  repeated ItemReply list = 1;
}

message FieldValue {
  oneof value {
    string value_string = 1;
    int64 value_int = 2;
    bool value_bool = 3;
    ItemReply value_item = 4;
    StringList value_string_list = 5;
    BoolList value_bool_list = 6;
    IntList value_int_list = 7;
    ItemList value_item_list = 8;
  }
}
